--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.4"
 edition = "2021"
 
 [dependencies]
+guard = "0.5.1"
 serenity = { version = "0.10.9", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "collector"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
