base connection voice<>bot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 guard = "0.5.1"
+bimap = "0.6.2"
 voskrust = { git = "https://github.com/tikitko/voskrust.git" }
 songbird = "0.2.2"
 fon = "0.6.0"
