--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "red-alert"
-version = "0.0.4"
+version = "0.0.5"
 edition = "2021"
 
 [dependencies]
-serenity = { version = "0.10.9", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "collector"] }
+guard = "0.5.1"
+bimap = "0.6.2"
+config = "0.13.1"
+voskrust = { git = "https://github.com/tikitko/voskrust.git" }
+songbird = "0.2.2"
+fon = "0.6.0"
+serenity = { version = "0.10", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "collector", "voice"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
