--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 log = "0.4"
-pretty_env_logger = "0.4"
+log4rs = "1.1.1"
 guard = "0.5.1"
 bimap = "0.6.2"
 config = "0.13.1"
