--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "red-alert"
-version = "0.0.5"
+version = "0.0.6"
 edition = "2021"
 
 [dependencies]
+log = "0.4"
+log4rs = "1.1.1"
 guard = "0.5.1"
 bimap = "0.6.2"
 config = "0.13.1"
