--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serenity = { version = "0.11", default-features = false, features = ["builder", 
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 ngrammatic = "0.4.0"
 async-trait = "0.1.57"
+uuid = { version = "1.1.2", features = ["v4"] }
