--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ config = "0.13.1"
 voskrust = { git = "https://github.com/tikitko/voskrust.git", rev = "93a5a11" }
 songbird = "0.3.0"
 fon = "0.6.0"
+chrono = "0.4.23"
 serenity = { version = "0.11", default-features = false, features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "collector", "voice"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 ngrammatic = "0.4.0"
