--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 ngrammatic = "0.4.0"
 async-trait = "0.1.57"
 uuid = { version = "1.1.2", features = ["v4"] }
+serde = "1.0"
+serde_yaml = "0.9"
