--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ async-trait = "0.1.57"
 uuid = { version = "1.1.2", features = ["v4"] }
 serde = "1.0"
 serde_yaml = "0.9"
+fluent = "0.16.0"
+unic-langid = { version = "0.9.1", features = ["unic-langid-macros"] }
