--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ uuid = { version = "1.1.2", features = ["v4"] }
 serde = "1.0"
 serde_yaml = "0.9"
 fluent = "0.16.0"
+intl-memoizer = "0.5.1"
 unic-langid = { version = "0.9.1", features = ["unic-langid-macros"] }
